--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "reduce-reducers": "^0.4.3",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
